# Hexagon

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Hexagon  Hexagon.cpp  Hexagon.h  Makefile  bestScore.txt  main.cpp  myWindow.cpp  myWindow.h  mywindow.h
Multiplayer/: .gitignore  Bot.cpp  Bot.h  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Hexagon  Hexagon.cpp  Hexagon.h  Makefile  cmake_install.cmake  main.cpp  myWindow.cpp  myWindow.h  sfml-app
Singleplayer/: CMakeLists.txt  Hexagon.cpp  Hexagon.h  bot.h  main.cpp  myWindow.cpp  myWindow.h
